gap animation fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 h1 {
-    text-shadow: 2px 2px 10px rgba(f, f, f, .6);
+    font-weight: 100;
 }
